--- a/Chapter10 - Intro to Convolutional Neural Networks - Learning Edges and Corners.ipynb
+++ b/Chapter10 - Intro to Convolutional Neural Networks - Learning Edges and Corners.ipynb
@@ -9,9 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-07 04:57:56.493358: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-08-07 04:57:56.732678: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-08-07 04:57:56.936774: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-08-07 04:57:57.123114: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-08-07 04:57:57.172360: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-08-07 04:57:57.494755: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-08-07 04:58:00.308814: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -90,233 +104,7 @@
       "I:70 Test-Acc:0.7973 Train-Acc:0.64\n",
       "I:71 Test-Acc:0.8013 Train-Acc:0.621\n",
       "I:72 Test-Acc:0.8029 Train-Acc:0.626\n",
-      "I:73 Test-Acc:0.8092 Train-Acc:0.631\n",
-      "I:74 Test-Acc:0.8099 Train-Acc:0.638\n",
-      "I:75 Test-Acc:0.8156 Train-Acc:0.661\n",
-      "I:76 Test-Acc:0.8156 Train-Acc:0.639\n",
-      "I:77 Test-Acc:0.8184 Train-Acc:0.65\n",
-      "I:78 Test-Acc:0.8216 Train-Acc:0.67\n",
-      "I:79 Test-Acc:0.8246 Train-Acc:0.675\n",
-      "I:80 Test-Acc:0.8237 Train-Acc:0.666\n",
-      "I:81 Test-Acc:0.8273 Train-Acc:0.673\n",
-      "I:82 Test-Acc:0.8273 Train-Acc:0.704\n",
-      "I:83 Test-Acc:0.8314 Train-Acc:0.674\n",
-      "I:84 Test-Acc:0.8292 Train-Acc:0.686\n",
-      "I:85 Test-Acc:0.8335 Train-Acc:0.699\n",
-      "I:86 Test-Acc:0.8359 Train-Acc:0.694\n",
-      "I:87 Test-Acc:0.8375 Train-Acc:0.704\n",
-      "I:88 Test-Acc:0.8373 Train-Acc:0.697\n",
-      "I:89 Test-Acc:0.8398 Train-Acc:0.704\n",
-      "I:90 Test-Acc:0.8393 Train-Acc:0.687\n",
-      "I:91 Test-Acc:0.8436 Train-Acc:0.705\n",
-      "I:92 Test-Acc:0.8437 Train-Acc:0.711\n",
-      "I:93 Test-Acc:0.8446 Train-Acc:0.721\n",
-      "I:94 Test-Acc:0.845 Train-Acc:0.719\n",
-      "I:95 Test-Acc:0.8469 Train-Acc:0.724\n",
-      "I:96 Test-Acc:0.8476 Train-Acc:0.726\n",
-      "I:97 Test-Acc:0.848 Train-Acc:0.718\n",
-      "I:98 Test-Acc:0.8496 Train-Acc:0.719\n",
-      "I:99 Test-Acc:0.85 Train-Acc:0.73\n",
-      "I:100 Test-Acc:0.8511 Train-Acc:0.737\n",
-      "I:101 Test-Acc:0.8503 Train-Acc:0.73\n",
-      "I:102 Test-Acc:0.8504 Train-Acc:0.717\n",
-      "I:103 Test-Acc:0.8528 Train-Acc:0.74\n",
-      "I:104 Test-Acc:0.8532 Train-Acc:0.733\n",
-      "I:105 Test-Acc:0.8537 Train-Acc:0.73\n",
-      "I:106 Test-Acc:0.8568 Train-Acc:0.721\n",
-      "I:107 Test-Acc:0.857 Train-Acc:0.75\n",
-      "I:108 Test-Acc:0.8558 Train-Acc:0.731\n",
-      "I:109 Test-Acc:0.8578 Train-Acc:0.744\n",
-      "I:110 Test-Acc:0.8588 Train-Acc:0.754\n",
-      "I:111 Test-Acc:0.8579 Train-Acc:0.732\n",
-      "I:112 Test-Acc:0.8582 Train-Acc:0.747\n",
-      "I:113 Test-Acc:0.8593 Train-Acc:0.747\n",
-      "I:114 Test-Acc:0.8598 Train-Acc:0.751\n",
-      "I:115 Test-Acc:0.8603 Train-Acc:0.74\n",
-      "I:116 Test-Acc:0.86 Train-Acc:0.753\n",
-      "I:117 Test-Acc:0.8588 Train-Acc:0.746\n",
-      "I:118 Test-Acc:0.861 Train-Acc:0.741\n",
-      "I:119 Test-Acc:0.8616 Train-Acc:0.731\n",
-      "I:120 Test-Acc:0.8629 Train-Acc:0.753\n",
-      "I:121 Test-Acc:0.8609 Train-Acc:0.743\n",
-      "I:122 Test-Acc:0.8627 Train-Acc:0.752\n",
-      "I:123 Test-Acc:0.8646 Train-Acc:0.76\n",
-      "I:124 Test-Acc:0.8649 Train-Acc:0.766\n",
-      "I:125 Test-Acc:0.8659 Train-Acc:0.752\n",
-      "I:126 Test-Acc:0.868 Train-Acc:0.756\n",
-      "I:127 Test-Acc:0.8648 Train-Acc:0.767\n",
-      "I:128 Test-Acc:0.8662 Train-Acc:0.747\n",
-      "I:129 Test-Acc:0.8669 Train-Acc:0.753\n",
-      "I:130 Test-Acc:0.8694 Train-Acc:0.753\n",
-      "I:131 Test-Acc:0.8692 Train-Acc:0.76\n",
-      "I:132 Test-Acc:0.8658 Train-Acc:0.756\n",
-      "I:133 Test-Acc:0.8666 Train-Acc:0.769\n",
-      "I:134 Test-Acc:0.8692 Train-Acc:0.77\n",
-      "I:135 Test-Acc:0.8681 Train-Acc:0.757\n",
-      "I:136 Test-Acc:0.8705 Train-Acc:0.77\n",
-      "I:137 Test-Acc:0.8706 Train-Acc:0.77\n",
-      "I:138 Test-Acc:0.8684 Train-Acc:0.768\n",
-      "I:139 Test-Acc:0.8664 Train-Acc:0.774\n",
-      "I:140 Test-Acc:0.8666 Train-Acc:0.756\n",
-      "I:141 Test-Acc:0.8705 Train-Acc:0.783\n",
-      "I:142 Test-Acc:0.87 Train-Acc:0.775\n",
-      "I:143 Test-Acc:0.8729 Train-Acc:0.769\n",
-      "I:144 Test-Acc:0.8725 Train-Acc:0.776\n",
-      "I:145 Test-Acc:0.8721 Train-Acc:0.772\n",
-      "I:146 Test-Acc:0.8718 Train-Acc:0.765\n",
-      "I:147 Test-Acc:0.8746 Train-Acc:0.777\n",
-      "I:148 Test-Acc:0.8746 Train-Acc:0.77\n",
-      "I:149 Test-Acc:0.8734 Train-Acc:0.778\n",
-      "I:150 Test-Acc:0.873 Train-Acc:0.785\n",
-      "I:151 Test-Acc:0.8732 Train-Acc:0.76\n",
-      "I:152 Test-Acc:0.8727 Train-Acc:0.779\n",
-      "I:153 Test-Acc:0.8754 Train-Acc:0.772\n",
-      "I:154 Test-Acc:0.8729 Train-Acc:0.773\n",
-      "I:155 Test-Acc:0.8758 Train-Acc:0.784\n",
-      "I:156 Test-Acc:0.8732 Train-Acc:0.774\n",
-      "I:157 Test-Acc:0.8743 Train-Acc:0.782\n",
-      "I:158 Test-Acc:0.8762 Train-Acc:0.772\n",
-      "I:159 Test-Acc:0.8755 Train-Acc:0.79\n",
-      "I:160 Test-Acc:0.8751 Train-Acc:0.774\n",
-      "I:161 Test-Acc:0.8749 Train-Acc:0.782\n",
-      "I:162 Test-Acc:0.8744 Train-Acc:0.78\n",
-      "I:163 Test-Acc:0.8765 Train-Acc:0.782\n",
-      "I:164 Test-Acc:0.8738 Train-Acc:0.796\n",
-      "I:165 Test-Acc:0.8753 Train-Acc:0.798\n",
-      "I:166 Test-Acc:0.8767 Train-Acc:0.794\n",
-      "I:167 Test-Acc:0.8746 Train-Acc:0.784\n",
-      "I:168 Test-Acc:0.8769 Train-Acc:0.796\n",
-      "I:169 Test-Acc:0.8758 Train-Acc:0.789\n",
-      "I:170 Test-Acc:0.8764 Train-Acc:0.79\n",
-      "I:171 Test-Acc:0.873 Train-Acc:0.791\n",
-      "I:172 Test-Acc:0.8765 Train-Acc:0.797\n",
-      "I:173 Test-Acc:0.8772 Train-Acc:0.789\n",
-      "I:174 Test-Acc:0.8778 Train-Acc:0.781\n",
-      "I:175 Test-Acc:0.8758 Train-Acc:0.799\n",
-      "I:176 Test-Acc:0.8773 Train-Acc:0.785\n",
-      "I:177 Test-Acc:0.8766 Train-Acc:0.796\n",
-      "I:178 Test-Acc:0.8782 Train-Acc:0.803\n",
-      "I:179 Test-Acc:0.8789 Train-Acc:0.794\n",
-      "I:180 Test-Acc:0.8778 Train-Acc:0.794\n",
-      "I:181 Test-Acc:0.8778 Train-Acc:0.8\n",
-      "I:182 Test-Acc:0.8785 Train-Acc:0.791\n",
-      "I:183 Test-Acc:0.8777 Train-Acc:0.787\n",
-      "I:184 Test-Acc:0.8769 Train-Acc:0.781\n",
-      "I:185 Test-Acc:0.8765 Train-Acc:0.786\n",
-      "I:186 Test-Acc:0.8765 Train-Acc:0.793\n",
-      "I:187 Test-Acc:0.8785 Train-Acc:0.796\n",
-      "I:188 Test-Acc:0.879 Train-Acc:0.789\n",
-      "I:189 Test-Acc:0.8763 Train-Acc:0.79\n",
-      "I:190 Test-Acc:0.8774 Train-Acc:0.787\n",
-      "I:191 Test-Acc:0.8766 Train-Acc:0.782\n",
-      "I:192 Test-Acc:0.8803 Train-Acc:0.798\n",
-      "I:193 Test-Acc:0.8781 Train-Acc:0.789\n",
-      "I:194 Test-Acc:0.8795 Train-Acc:0.785\n",
-      "I:195 Test-Acc:0.8791 Train-Acc:0.807\n",
-      "I:196 Test-Acc:0.8778 Train-Acc:0.796\n",
-      "I:197 Test-Acc:0.8783 Train-Acc:0.801\n",
-      "I:198 Test-Acc:0.8778 Train-Acc:0.81\n",
-      "I:199 Test-Acc:0.8771 Train-Acc:0.784\n",
-      "I:200 Test-Acc:0.8776 Train-Acc:0.792\n",
-      "I:201 Test-Acc:0.8784 Train-Acc:0.794\n",
-      "I:202 Test-Acc:0.8787 Train-Acc:0.795\n",
-      "I:203 Test-Acc:0.8803 Train-Acc:0.781\n",
-      "I:204 Test-Acc:0.8798 Train-Acc:0.804\n",
-      "I:205 Test-Acc:0.8779 Train-Acc:0.779\n",
-      "I:206 Test-Acc:0.8788 Train-Acc:0.792\n",
-      "I:207 Test-Acc:0.8764 Train-Acc:0.793\n",
-      "I:208 Test-Acc:0.8792 Train-Acc:0.792\n",
-      "I:209 Test-Acc:0.8798 Train-Acc:0.803\n",
-      "I:210 Test-Acc:0.8788 Train-Acc:0.804\n",
-      "I:211 Test-Acc:0.8793 Train-Acc:0.797\n",
-      "I:212 Test-Acc:0.8764 Train-Acc:0.791\n",
-      "I:213 Test-Acc:0.8801 Train-Acc:0.801\n",
-      "I:214 Test-Acc:0.8814 Train-Acc:0.799\n",
-      "I:215 Test-Acc:0.8806 Train-Acc:0.79\n",
-      "I:216 Test-Acc:0.8799 Train-Acc:0.8\n",
-      "I:217 Test-Acc:0.8803 Train-Acc:0.802\n",
-      "I:218 Test-Acc:0.8782 Train-Acc:0.807\n",
-      "I:219 Test-Acc:0.8818 Train-Acc:0.797\n",
-      "I:220 Test-Acc:0.8793 Train-Acc:0.799\n",
-      "I:221 Test-Acc:0.8789 Train-Acc:0.815\n",
-      "I:222 Test-Acc:0.8791 Train-Acc:0.816\n",
-      "I:223 Test-Acc:0.8793 Train-Acc:0.809\n",
-      "I:224 Test-Acc:0.8814 Train-Acc:0.795\n",
-      "I:225 Test-Acc:0.8798 Train-Acc:0.799\n",
-      "I:226 Test-Acc:0.8805 Train-Acc:0.806\n",
-      "I:227 Test-Acc:0.88 Train-Acc:0.808\n",
-      "I:228 Test-Acc:0.8782 Train-Acc:0.801\n",
-      "I:229 Test-Acc:0.8802 Train-Acc:0.814\n",
-      "I:230 Test-Acc:0.8807 Train-Acc:0.8\n",
-      "I:231 Test-Acc:0.8809 Train-Acc:0.798\n",
-      "I:232 Test-Acc:0.8805 Train-Acc:0.82\n",
-      "I:233 Test-Acc:0.8795 Train-Acc:0.794\n",
-      "I:234 Test-Acc:0.8807 Train-Acc:0.806\n",
-      "I:235 Test-Acc:0.8806 Train-Acc:0.808\n",
-      "I:236 Test-Acc:0.8787 Train-Acc:0.802\n",
-      "I:237 Test-Acc:0.8796 Train-Acc:0.81\n",
-      "I:238 Test-Acc:0.8766 Train-Acc:0.805\n",
-      "I:239 Test-Acc:0.8781 Train-Acc:0.792\n",
-      "I:240 Test-Acc:0.8787 Train-Acc:0.809\n",
-      "I:241 Test-Acc:0.8762 Train-Acc:0.802\n",
-      "I:242 Test-Acc:0.8775 Train-Acc:0.811\n",
-      "I:243 Test-Acc:0.8804 Train-Acc:0.814\n",
-      "I:244 Test-Acc:0.8794 Train-Acc:0.804\n",
-      "I:245 Test-Acc:0.8788 Train-Acc:0.801\n",
-      "I:246 Test-Acc:0.8777 Train-Acc:0.795\n",
-      "I:247 Test-Acc:0.8785 Train-Acc:0.808\n",
-      "I:248 Test-Acc:0.8788 Train-Acc:0.803\n",
-      "I:249 Test-Acc:0.8773 Train-Acc:0.813\n",
-      "I:250 Test-Acc:0.8786 Train-Acc:0.808\n",
-      "I:251 Test-Acc:0.8787 Train-Acc:0.803\n",
-      "I:252 Test-Acc:0.8789 Train-Acc:0.812\n",
-      "I:253 Test-Acc:0.8792 Train-Acc:0.804\n",
-      "I:254 Test-Acc:0.8779 Train-Acc:0.815\n",
-      "I:255 Test-Acc:0.8796 Train-Acc:0.811\n",
-      "I:256 Test-Acc:0.8798 Train-Acc:0.806\n",
-      "I:257 Test-Acc:0.88 Train-Acc:0.803\n",
-      "I:258 Test-Acc:0.8776 Train-Acc:0.795\n",
-      "I:259 Test-Acc:0.8798 Train-Acc:0.803\n",
-      "I:260 Test-Acc:0.8799 Train-Acc:0.805\n",
-      "I:261 Test-Acc:0.8789 Train-Acc:0.807\n",
-      "I:262 Test-Acc:0.8784 Train-Acc:0.804\n",
-      "I:263 Test-Acc:0.8792 Train-Acc:0.806\n",
-      "I:264 Test-Acc:0.8777 Train-Acc:0.796\n",
-      "I:265 Test-Acc:0.8785 Train-Acc:0.821\n",
-      "I:266 Test-Acc:0.8794 Train-Acc:0.81\n",
-      "I:267 Test-Acc:0.8783 Train-Acc:0.816\n",
-      "I:268 Test-Acc:0.8777 Train-Acc:0.812\n",
-      "I:269 Test-Acc:0.8791 Train-Acc:0.812\n",
-      "I:270 Test-Acc:0.878 Train-Acc:0.813\n",
-      "I:271 Test-Acc:0.8784 Train-Acc:0.82\n",
-      "I:272 Test-Acc:0.8792 Train-Acc:0.821\n",
-      "I:273 Test-Acc:0.8781 Train-Acc:0.823\n",
-      "I:274 Test-Acc:0.8788 Train-Acc:0.816\n",
-      "I:275 Test-Acc:0.8793 Train-Acc:0.82\n",
-      "I:276 Test-Acc:0.8781 Train-Acc:0.829\n",
-      "I:277 Test-Acc:0.8795 Train-Acc:0.809\n",
-      "I:278 Test-Acc:0.875 Train-Acc:0.806\n",
-      "I:279 Test-Acc:0.8795 Train-Acc:0.813\n",
-      "I:280 Test-Acc:0.88 Train-Acc:0.816\n",
-      "I:281 Test-Acc:0.8796 Train-Acc:0.819\n",
-      "I:282 Test-Acc:0.8802 Train-Acc:0.809\n",
-      "I:283 Test-Acc:0.8804 Train-Acc:0.811\n",
-      "I:284 Test-Acc:0.8779 Train-Acc:0.808\n",
-      "I:285 Test-Acc:0.8816 Train-Acc:0.82\n",
-      "I:286 Test-Acc:0.8792 Train-Acc:0.822\n",
-      "I:287 Test-Acc:0.8791 Train-Acc:0.817\n",
-      "I:288 Test-Acc:0.8769 Train-Acc:0.814\n",
-      "I:289 Test-Acc:0.8785 Train-Acc:0.807\n",
-      "I:290 Test-Acc:0.8778 Train-Acc:0.817\n",
-      "I:291 Test-Acc:0.8794 Train-Acc:0.82\n",
-      "I:292 Test-Acc:0.8804 Train-Acc:0.824\n",
-      "I:293 Test-Acc:0.8779 Train-Acc:0.812\n",
-      "I:294 Test-Acc:0.8784 Train-Acc:0.816\n",
-      "I:295 Test-Acc:0.877 Train-Acc:0.817\n",
-      "I:296 Test-Acc:0.8767 Train-Acc:0.826\n",
-      "I:297 Test-Acc:0.8774 Train-Acc:0.816\n",
-      "I:298 Test-Acc:0.8774 Train-Acc:0.804\n",
-      "I:299 Test-Acc:0.8774 Train-Acc:0.814"
+      "I:73 Test-Acc:0.8092 Train-Acc:0.631"
      ]
     }
    ],
@@ -331,6 +119,7 @@
     "images, labels = (x_train[0:1000].reshape(1000,28*28) / 255,\n",
     "                  y_train[0:1000])\n",
     "\n",
+    "print(images[0])\n",
     "\n",
     "one_hot_labels = np.zeros((len(labels),10))\n",
     "for i,l in enumerate(labels):\n",
@@ -483,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
